vs-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: placeholder
spec:
  hosts:
  - api.bugparty.net
  gateways:
  - istio-ingress/my-gateway
  http:
  - name: direct-response
    directResponse:
      status: 200
      body:
        string: "Future Home of the bug-party API"
